--- a/scss/global/_text.scss
+++ b/scss/global/_text.scss
@@ -6,12 +6,6 @@
   vertical-align: center;
 }
 
-.pp-number {
-  font-weight: bold;
-  font-size: 1.5rem;
-  color: color('dark-grey')
-}
-
 .primary-heading {
   border: 0;
   color: color('dark-grey');
